Removed padding on left and right of main

--- a/index.html
+++ b/index.html
@@ -99,12 +99,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script type="text/javscript" src="./slick/slick.min.js"></script>
     <script>
-        $(document).ready(function() {
-            $(".mySlider").slick({
+        $(document).ready(function(){
+            $('.mySlider').slick({
                 dots: true,
                 arrows: false,
                 infinite: true,
-                speed: 1000,
                 autoplay: true,
                 autoplaySpeed: 3000
             });
