Added blog articles for small screens

--- a/index.html
+++ b/index.html
@@ -87,6 +87,55 @@
             <img src="./images/image-slider4.jpg" alt="Slider Image 4">
         </picture>
     </div>
+
+    <!-- Blog Articles -->
+    <h2 class="blogHeader">Recent Blog Articles</h2>
+
+    <div id="blogDiv">
+        <a href="#">
+            <div class="blogArticle activityArticle">
+                <div class="blogTitle">
+                    Onboard Activities
+                </div>
+                <div class="blogDate">
+                    Date
+                </div>
+            </div>
+        </a>
+
+        <a href="#">
+            <div class="blogArticle diningArticle">
+                <div class="blogTitle">
+                    Dining
+                </div>
+                <div class="blogDate">
+                    Date
+                </div>
+            </div>
+        </a>
+
+        <a href="#">
+            <div class="blogArticle destinationArticle">
+                <div class="blogTitle">
+                    Destinations
+                </div>
+                <div class="blogDate">
+                    Date
+                </div>
+            </div>
+        </a>
+
+        <a href="#">
+            <div class="blogArticle roomArticle">
+                <div class="blogTitle">
+                    Rooms
+                </div>
+                <div class="blogDate">
+                    Date
+                </div>
+            </div>
+        </a>
+    </div>
     
 
 </main>
