Added blog styles for medium, small screens

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     Onboard Activities
                 </div>
                 <div class="blogDate">
-                    Date
+                    January 15, 2020
                 </div>
             </div>
         </a>
@@ -109,7 +109,7 @@
                     Dining
                 </div>
                 <div class="blogDate">
-                    Date
+                    February 9, 2020
                 </div>
             </div>
         </a>
@@ -120,7 +120,7 @@
                     Destinations
                 </div>
                 <div class="blogDate">
-                    Date
+                    June 24, 2020
                 </div>
             </div>
         </a>
@@ -131,7 +131,7 @@
                     Rooms
                 </div>
                 <div class="blogDate">
-                    Date
+                    August 17, 2020
                 </div>
             </div>
         </a>
