Added JSON-LD data

--- a/index.html
+++ b/index.html
@@ -146,6 +146,8 @@
     </footer>
 
     <script src="./js/index.js"></script>
+
+    <!-- Slick Image Slider Script Stuff -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script type="text/javascript" src="slick/slick.min.js"></script>
     <script>
@@ -160,5 +162,27 @@
             });
         });
     </script>
+
+
+<!-- JSON-LD Data -->
+    <script type="application/ld+json">
+        {
+        "@context":"https://schema.org",
+        "@type":"TravelAgency",
+        "name":"Cabot Cruises",
+        "description":"Cabot Cruises is a travel agency providing the best cruise deals on our online travel website.",
+        "openingHours":"M-F 09:00-16:00",
+        "telephone":"+18005551234",
+        "address":{
+            "@type":"PostalAddress",
+            "streetAddress":"23 South Main St. Suite 16",
+            "addressLocality":"Lexington",
+            "addressRegion":"VA"
+        },
+        "image":"https://dgm3740-cabot-cruises.netlify.app/images/logo2-example.png",
+        "priceRange":"$500 to $4000"
+        }
+    </script>
+
 </body>
 </html>
