--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <li><a href="#">Book</a></li> 
             </ul>
 
-            <form class="searchBar" action="">
+            <form class="searchBar">
                 <input type="search" placeholder="Search" name="search">
                 <button type="submit"><i class="fas fa-search"></i></button>
             </form>
@@ -166,7 +166,7 @@
                 <form>
                     <h3>News Letter</h3>
                     <p>Subscribe to our email list and stay up-to-date with our hottest offers and latest specials.</p>
-                    <input type="email" placeholder="Enter Email" name="email"></input>
+                    <input type="email" placeholder="Enter Email" name="email">
                     <button type="submit">Subscribe</button>
                 </form>
             </div>
@@ -200,7 +200,7 @@
 
 <!-- Slick Image Slider Script Stuff -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script type="text/javascript" src="slick/slick.min.js"></script>
+    <script src="slick/slick.min.js"></script>
     <script>
         $(document).ready(function(){
             $('.mySlider').slick({
